# BSP-TexInfo-Obfuscator

./: .gitignore  CMakeLists.txt  README  README.md
src/: BSPFile.cpp  BSPFile.h  SurfaceFlags.h  main.cpp
